--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background_login"
-    tools:context="com.module.sayem.foodculture.LoginActivity">
+    tools:context="com.module.sayem.foodculture.ui.LoginActivity">
 
     <RelativeLayout
         android:id="@+id/rl_logo"
