--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -2,8 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/overflow"
+        android:icon="@drawable/ic_more"
+        android:orderInCategory="201"
+        android:title=""
+        app:showAsAction="ifRoom">
+
+        <menu>
+
+            <item
+                android:id="@+id/action_settings"
+                android:icon="@drawable/ic_logout"
+                android:orderInCategory="100"
+                android:title="@string/action_log_out"
+                app:showAsAction="never" />
+        </menu>
+    </item>
+
 </menu>
