--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,18 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
-        <item name="android:buttonStyle">@style/RobotoButtonStyle</item>
+        <item name="android:textViewStyle">@style/AppTheme.Widget.UbuntuTextViewStyle</item>
+    </style>
+
+
+    <style name="AppTheme.Widget"/>
+
+    <style name="AppTheme.Widget.UbuntuTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@fonts/Ubuntu-Regular.ttf</item>
+    </style>
+
+    <style name="UbuntuButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:fontFamily">@fonts/Ubuntu-Medium</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -24,12 +34,5 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
-        <item name="android:fontFamily">@fonts/Ubuntu-Bold.ttf</item>
-    </style>
-
-    <style name="RobotoButtonStyle" parent="android:Widget.Holo.Button">
-        <item name="android:fontFamily">@fonts/Ubuntu-Bold.ttf</item>
-    </style>
 
 </resources>
