--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,14 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_login"
     android:gravity="center_horizontal"
-    android:id="@+id/main_layout"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background_login"
     tools:context="com.module.sayem.foodculture.ui.LoginActivity">
 
     <RelativeLayout
@@ -19,8 +19,9 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/snackups"
-            />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/snackups" />
 
     </RelativeLayout>
 
@@ -28,10 +29,10 @@
 
     <ScrollView
         android:id="@+id/login_form"
-        android:layout_below="@+id/rl_logo"
-        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rl_logo"
+        android:layout_centerInParent="true">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -40,21 +41,21 @@
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
+                style="@style/App.TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColorHint="@color/colorHints"
-                style="@style/App.TextInputLayout">
+                android:textColorHint="@color/colorHints">
 
                 <AutoCompleteTextView
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_email"
-                    android:foregroundTint="@color/colorHints"
                     android:backgroundTint="@color/colorHints"
-                    android:popupTheme="@style/Platform.AppCompat.Light"
+                    android:foregroundTint="@color/colorHints"
+                    android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
+                    android:popupTheme="@style/Platform.AppCompat.Light"
                     android:singleLine="true" />
 
             </android.support.design.widget.TextInputLayout>
@@ -68,9 +69,9 @@
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
-                    android:foregroundTint="@color/colorHints"
                     android:backgroundTint="@color/colorHints"
+                    android:foregroundTint="@color/colorHints"
+                    android:hint="@string/prompt_password"
                     android:imeActionId="6"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
@@ -86,11 +87,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="26dp"
+                android:background="@drawable/btn_bg"
                 android:elevation="6dp"
                 android:fontFamily="sans-serif-smallcaps"
-                android:textColor="#fff"
-                android:background="@drawable/btn_bg"
                 android:text="@string/action_sign_in"
+                android:textColor="#fff"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -98,9 +99,9 @@
 
     <ProgressBar
         android:id="@+id/login_progress"
-        android:layout_centerInParent="true"
         style="?android:attr/progressBarStyleLargeInverse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:visibility="gone" />
 </RelativeLayout>
