--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.module.sayem.foodculture.ui.LoginActivity">
+    tools:context="com.module.sayem.foodculture.ui.activities.LoginActivity">
 
     <RelativeLayout
         android:id="@+id/rl_logo"
@@ -21,7 +21,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:src="@drawable/snackups" />
+            android:src="@drawable/snackups"
+            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
@@ -47,13 +48,13 @@
                 android:textColorHint="@color/colorHints">
 
                 <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/user_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorHints"
                     android:foregroundTint="@color/colorHints"
                     android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress"
+                    android:inputType="textAutoComplete"
                     android:maxLines="1"
                     android:popupTheme="@style/Platform.AppCompat.Light"
                     android:singleLine="true" />
@@ -66,7 +67,7 @@
                 android:textColorHint="@color/colorHints">
 
                 <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/user_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorHints"
