--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -11,10 +11,11 @@
         <menu>
 
             <item
-                android:id="@+id/action_settings"
+                android:id="@+id/action_logout"
                 android:icon="@drawable/ic_logout"
                 android:orderInCategory="100"
                 android:title="@string/action_log_out"
+                android:onClick="LogOut"
                 app:showAsAction="never" />
         </menu>
     </item>
