--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -33,7 +33,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:elevation="10dp"
-            app:backgroundTint="@android:color/white"
+            app:backgroundTint="@android:color/holo_green_dark"
             android:src="@drawable/ic_add"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
