--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="nav_header_height">188dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="toolbar_height">56dp</dimen>
+    <dimen name="ic_clear_margin">10dp</dimen>
 </resources>
