--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -3,7 +3,8 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:id="@+id/cv_item"
+    android:layout_marginBottom="5dp"
     android:elevation="5dp">
 
     <LinearLayout
@@ -39,7 +40,7 @@
             android:id="@+id/undo_button"
             style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="end|center_vertical"
             android:gravity="center"
             android:text="@string/undo"
