--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -3,7 +3,9 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_item"
+    android:layout_margin="5dp"
     android:layout_marginBottom="5dp"
     android:elevation="5dp">
 
@@ -36,17 +38,20 @@
             android:layout_marginTop="10dp"
             android:text="@string/str_demo" />
 
-        <Button
-            android:id="@+id/undo_button"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end|center_vertical"
-            android:gravity="center"
-            android:text="@string/undo"
-            android:textAllCaps="true"
-            android:textColor="@android:color/white" />
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/undo_button"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:background="#ff4f4f"
+        android:gravity="end|center_vertical"
+        android:paddingEnd="35dp"
+        android:text="@string/undo"
+        android:textAllCaps="true"
+        android:textColor="@android:color/white"
+        tools:ignore="RtlCompat,RtlSymmetry" />
 
 </android.support.v7.widget.CardView>
